# sycho-engine

./: .cursorrules  .gitignore  Cargo.toml  TESTING.md  go.sh
editor/: README.md
engine/: Cargo.toml
game/: Cargo.toml
game/assets/: skilltree.json
game/assets/sfx/: README.md
game/src/: agent.rs  background.rs  debug.rs  editor_actions.rs  editor_api.rs  gpu_renderer.rs  headful_editor_api.rs  lib.rs  main.rs  perf_budget.rs  playtest.rs  round_timer.rs  serde_duration.rs  settings.rs  sfx.rs  skilltree.rs  state.rs  tetris_core.rs  tetris_ui.rs  ui_ids.rs  view.rs  view_tree.rs
game/src/headful/: dig_camera.rs  input_adapter.rs  mod.rs  remote_control.rs  render_pipeline.rs  skilltree_camera.rs  view_transitions.rs
game/src/tetris_ui/: menus.rs
game/tests/: agent_game_tests.rs  debug_hud_tests.rs  e2e_playtest_tests.rs  game_state_tests.rs  overlay_board_tests.rs  sfx_volume_tests.rs  tetris_core_tests.rs  tetris_ui_tests.rs  timemachine_recording_replay_tests.rs  window_resize_tests.rs
plans/: background_tile_mvp_checklist.txt  background_tile_system_plan.txt  biome_transition_parallax_layers_plan.txt  bottomwell_plan.txt  bottomwell_skill_progression_plan.txt  digging_camera_descent_plan.txt  headful_modularization_plan.txt  input_framework_engine_migration_plan.txt  milestone_depth_wall_plan.txt  milestone_wall_archetypes_plan.txt  overworld_surface_start_background_plan.txt  performance_budget_hud_profiler_plan.txt  run_resource_economy_bridge_plan.txt  skilltree_constellation_worldspace_plan.txt  skilltree_editor_personal_accessibility_plan.txt  (+3 more)
(+50 files in other folders)
