[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
pixels = "0.13"
rodio = "0.17"
winit = "0.28"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
