[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
pixels = "0.13"
rodio = "0.17"
winit = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tower = "0.5"
